Always include 31000003106 Test subontology module