@@ -41,8 +41,10 @@ public class RF2ExtractionService {
 		logger.info("Extracting {} concepts from RF2.", conceptIds.size());
 		ReleaseImporter releaseImporter = new ReleaseImporter();
 		String dateString = dateFormat.format(new Date());
-		try (RF2ExtractionWriter extractionWriter = new RF2ExtractionWriter(conceptIds, refsetsToInclude, dateString, outputDirectory)) {
-			releaseImporter.loadEffectiveSnapshotReleaseFileStreams(Collections.singleton(rf2SnapshotArchive), LoadingProfile.complete, extractionWriter, false);
+		try (RF2ExtractionWriter extractionWriter = new RF2ExtractionWriter(conceptIds, refsetsToInclude, dateString, outputDirectory);
+			 InputStream testSubontologyModuleZip = getClass().getResourceAsStream("/SnomedCT_TestSubonologyModule.zip")) {
+
+			releaseImporter.loadEffectiveSnapshotReleaseFileStreams(Set.of(rf2SnapshotArchive, testSubontologyModuleZip), LoadingProfile.complete, extractionWriter, false);
 		}
 		logger.info("Extraction complete.");
 	}
